--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,7 +57,7 @@
       <ul>
         {% for institution in site.institutions %}
         <li>
-          <a href="{{ institution.website }}"
+          <a class="institution-link" href="{{ institution.website }}"
             ><img
               class="institution-logo"
               src="{{ institution.logo }}"
