--- a/_layouts/person.html
+++ b/_layouts/person.html
@@ -143,6 +143,9 @@ layout: default
         {% if page.github %}
         <a href="{{page.github}}"><i class="fa fa-github"></i> GitHub</a><br>
         {% endif %}
+        {% if page.website %}
+        <a href="{{page.website}}"><i class="fa fa-globe"></i> Web</a><br>
+        {% endif %}
         {% if page.office-hours %}
         <br>
         Office Hours: {{page.office-hours}} 
