Header and Footer updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -78,9 +78,7 @@
           >Creative Commons Attribution license (CC BY)</a
         >. <br />
         Copyright or exclusive license of the linked publications is frequently
-        with the publishers. Logo by
-        <a href="https://twitter.com/antarcticdesign">Antarctic Design</a>. Last
-        updated on {{ site.time | date: '%B %d, %Y' }}
+        with the publishers.
       </p>
     </div>
   </div>
