--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -14,8 +14,10 @@
 <link rel="stylesheet" href="{{base.url}}/css/vdl_logo_styles.css">
 
 <!-- Fav and touch icons -->
-<link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico" />
-<link rel="apple-touch-icon" href="{{ site.baseurl }}/favicon.png" />
+<!-- <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico" /> -->
+<link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/mu_logo.svg" />
+<!-- <link rel="apple-touch-icon" href="{{ site.baseurl }}/favicon.png" /> -->
+<link rel="apple-touch-icon" href="{{ site.baseurl }}/mu_logo.svg" />
 
 {% if page.layout == "post" %} 
 <meta name="twitter:image:src" content="{{ site.url }}{{page.lead-image}}"> 
