--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -36,7 +36,7 @@ layout: default
   <article class="team-content">
       <h1 class="team-heading">Faculty</h1>
 
-      {% include person.html key="lex" %}
+      {% include person.html key="chi-ren" %}
 
       {% if ifpostdoc %}
       <p class="space">&nbsp;</p>
